# distortion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h.in
inc/: CMakeLists.txt  dct.h  filter.h  image.h  img.h  kernel.h  main.h  relblock.h  rle.h  sobel.h  vec.h
src/: CMakeLists.txt  dct.cpp  defs.h  filter.cpp  image.cpp  img.cpp  main.cpp  relblock.cpp  rle.cpp  sobel.cpp  sort.cpp  vec.h
